[package]
name = "eebus-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zeroconf = "0.10.2"

# tungstenite = { version = "0.17.2", features = ["rustls-tls"] }
