[package]
name = "eebus-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zeroconf = "0.10.2"
rcgen = "0.9.2"
tungstenite = { version = "0.17.2", features = ["__rustls-tls"] }
url = "2.2.2"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
webpki = { version = "0.22.0", features = ["alloc", "std"] }
rustls-pemfile = "0.3.0"
httparse = "1.6.0"

# native-tls = { version = "0.2.10" }
