[package]
name = "eebus-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
zeroconf = "0.10.2"
rcgen = "0.9.2"
rsa = "0.6.0"
rand = "0.8.5"
tungstenite = { version = "0.17.2", features = ["native-tls"] }
url = "2.2.2"
native-tls = { version = "0.2.10" }
httparse = "1.6.0"
chrono = "0.4.19"
